# igoodmem_semantic-kernel

./: .gitignore  README.md  pyproject.toml
dotnet/GoodMem.SemanticKernel/: GoodMem.SemanticKernel.csproj  GoodMemClient.cs  GoodMemCollection.cs  GoodMemOptions.cs  GoodMemVectorStore.cs
dotnet/GoodMem.SemanticKernel.Tests/: GoodMem.SemanticKernel.Tests.csproj  MockHttpMessageHandler.cs
dotnet/GoodMem.SemanticKernel.Tests/Integration/: GoodMemIntegrationTests.cs
dotnet/GoodMem.SemanticKernel.Tests/Unit/: GoodMemCollectionTests.cs  GoodMemSchemaTests.cs  GoodMemVectorStoreTests.cs
examples/: README.md
examples/python/: example_agent.py  example_agent_azure.py  example_agent_huggingface.py  example_agent_nvidia.py  example_agent_simple.py  example_single_collection.py  example_store.py
java/: pom.xml
java/goodmem-semantic-kernel/: pom.xml
java/goodmem-semantic-kernel/src/main/java/ai/goodmem/semantickernel/: GoodMemClient.java  GoodMemException.java  GoodMemOptions.java
java/goodmem-semantic-kernel/src/test/java/ai/goodmem/semantickernel/: GoodMemClientTest.java
python/goodmem_semantic_kernel/: __init__.py  _client.py  collection.py  settings.py  store.py
python/tests/: conftest.py
python/tests/integration/: test_integration.py
python/tests/unit/: test_collection.py  test_store.py
samples/: README.md
samples/dotnet/ExampleAgent/: ExampleAgent.csproj  Program.cs
samples/dotnet/ExampleAgentAzure/: ExampleAgentAzure.csproj  Program.cs
samples/dotnet/ExampleAgentHuggingFace/: ExampleAgentHuggingFace.csproj  Program.cs
samples/dotnet/ExampleAgentNvidia/: ExampleAgentNvidia.csproj  Program.cs
samples/dotnet/ExampleStore/: ExampleStore.csproj  Program.cs
samples/python/: example_store.py
tests/integration/: test_integration.py
