[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goodmem-semantic-kernel"
version = "0.1.0"
description = "GoodMem connector for Microsoft Semantic Kernel"
readme = "README.md"
license = { text = "MIT" } 
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "semantic-kernel>=1.0",
]
keywords = ["semantic-kernel", "goodmem", "memory", "vector-store", "llm", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/PAIR-Systems-Inc/goodmem-semantic-kernel"
Repository = "https://github.com/PAIR-Systems-Inc/goodmem-semantic-kernel"
Documentation = "https://goodmem.ai/docs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require a live GoodMem server)",
]

[tool.hatch.build.targets.wheel]
packages = ["goodmem_semantic_kernel"]
